# realtime-markdown-viewer

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: app.rs  config.rs  event.rs  main.rs  theme.rs  ui.rs  watcher.rs
src/markdown/: highlight.rs  mod.rs  render.rs
